# swiss_taxmapp

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  scraper.py  todo.txt
cachedata/: map.html
data/: .timestamp.txt
data/rates/: estv_rates_2022.xlsx  estv_rates_2023.xlsx  estv_rates_2024.xlsx
data/scales/assets/2022/: estv_scales_AG.xlsx  estv_scales_AI.xlsx  estv_scales_AR.xlsx  estv_scales_BE.xlsx  estv_scales_BL.xlsx  estv_scales_BS.xlsx  estv_scales_FR.xlsx  estv_scales_GE.xlsx  estv_scales_GL.xlsx  estv_scales_GR.xlsx  estv_scales_JU.xlsx  estv_scales_LU.xlsx  estv_scales_NE.xlsx  estv_scales_NW.xlsx  estv_scales_OW.xlsx  estv_scales_SG.xlsx  estv_scales_SH.xlsx  estv_scales_SO.xlsx  estv_scales_SZ.xlsx  estv_scales_TG.xlsx  estv_scales_TI.xlsx  estv_scales_UR.xlsx  estv_scales_VD.xlsx  estv_scales_VS.xlsx  estv_scales_ZG.xlsx  estv_scales_ZH.xlsx
data/scales/assets/2023/: estv_scales_TI.xlsx
data/scales/assets/2024/: estv_scales_AG.xlsx  estv_scales_AI.xlsx  estv_scales_AR.xlsx  estv_scales_BE.xlsx  estv_scales_BL.xlsx  estv_scales_BS.xlsx  estv_scales_FR.xlsx  estv_scales_GE.xlsx  estv_scales_GL.xlsx  estv_scales_GR.xlsx  estv_scales_JU.xlsx  estv_scales_LU.xlsx  estv_scales_NE.xlsx  estv_scales_NW.xlsx  estv_scales_OW.xlsx  estv_scales_SG.xlsx  estv_scales_SH.xlsx  estv_scales_SO.xlsx  estv_scales_SZ.xlsx  estv_scales_TG.xlsx  estv_scales_TI.xlsx  (+5 more)
src/: app.py  prova.py  sandbox.py  scraper.py  taxmap.py
src/utils/: __init__.py  constants.py  pipelines.py  scraper.py
utils/: __init__.py  pipelines.py  scraper.py
(+78 files in other folders)
