[project]
name = "taxmap-switzerland"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==5.3.0",
    "geopandas>=1.0.1",
    "polars>=1.17.1",
    "pyarrow>=18.0.0",
    "streamlit>=1.40.1",
    "xlsx2csv>=0.8.4",
]
